--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             </div>
             <div class="fourm">
                 <form name="contact" action="POST" data-netlify="true" data-netlify-recaptcha="true" onsubmit="submit">
-                    <input type="text" id="lastname" name="lastname" placeholder="Last Name">
-                    <input type="text" id="firstname" name="firstname" placeholder="First Name">
-                    <input type="email" id="email" name="email" placeholder="Email">
+                    <input type="text" id="lastname" name="lastname" placeholder="Last Name" required>
+                    <input type="text" id="firstname" name="firstname" placeholder="First Name" required>
+                    <input type="email" id="email" name="email" placeholder="Email" required>
                     <input type="tel" id="tel" name="tel" placeholder="Phone Number(Optional)">
                     <textarea name="comment" placeholder="Message"></textarea>
                     <input type="hidden" name="form-name" value="contact">
