--- a/index.html
+++ b/index.html
@@ -90,12 +90,11 @@
                 <div class="address">Via San Vitale, 58 (BO)</div>
             </div>
             <div class="fourm">
-                <form name="contact" action="POST" data-netlify="true" onsubmit="submit">
                 <form name="contact" action="POST" data-netlify="true" data-netlify-recaptcha="true" onsubmit="submit">
                     <input type="text" id="lastname" name="lastname" placeholder="Last Name" required>
                     <input type="text" id="firstname" name="firstname" placeholder="First Name" required>
-                    <input type="email" id="email" name="email" placeholder="Email" required pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" title="Email is invalid '@'">
-                    <input type="tel" id="tel" name="tel" placeholder="Phone Number(Optional)" pattern="^\+[1-9]{1}[0-9]{3,14}$">
+                    <input type="email" id="email" name="email" placeholder="Email" required >
+                    <input type="tel" id="tel" name="tel" placeholder="Phone Number(Optional)">
                     <textarea name="comment" placeholder="Message"></textarea>
                     <input type="hidden" name="form-name" value="contact">
                     <div data-netlify-recaptcha="true"></div>
