--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 <form name="contact" action="POST" data-netlify="true" data-netlify-recaptcha="true" onsubmit="submit">
                     <input type="text" id="lastname" name="lastname" placeholder="Last Name" required>
                     <input type="text" id="firstname" name="firstname" placeholder="First Name" required>
-                    <input type="email" id="email" name="email" placeholder="Email" required >
+                    <input type="email" id="email" name="email" placeholder="Email" required>
                     <input type="tel" id="tel" name="tel" placeholder="Phone Number(Optional)">
-                    <textarea name="comment" placeholder="Message"></textarea>
+                    <textarea name="comment" placeholder="Message" required></textarea>
                     <input type="hidden" name="form-name" value="contact">
                     <div data-netlify-recaptcha="true"></div>
                     <input type="submit" value="submit">
