Added required attribute to Message

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <input type="text" id="firstname" name="firstname" placeholder="First Name" required>
                     <input type="email" id="email" name="email" placeholder="Email" required>
                     <input type="tel" id="tel" name="tel" placeholder="Phone Number(Optional)">
-                    <textarea name="comment" placeholder="Message" required></textarea>
+                    <textarea name="message" placeholder="Message" required></textarea>
                     <input type="hidden" name="form-name" value="contact">
                     <div data-netlify-recaptcha="true"></div>
                     <input type="submit" value="submit">
