--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <form name="contact" action="POST" data-netlify="true" data-netlify-recaptcha="true" onsubmit="submit">
                     <input type="text" id="lastname" name="lastname" placeholder="Last Name" required>
                     <input type="text" id="firstname" name="firstname" placeholder="First Name" required>
-                    <input type="email" id="email" name="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                    <input type="email" id="email" name="email" placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required>
                     <input type="tel" id="tel" name="tel" placeholder="Phone Number(Optional)">
                     <textarea name="message" placeholder="Message" required></textarea>
                     <input type="hidden" name="form-name" value="contact">
