Testing phone number input

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             required
                         />
                         <input
-                            type="number"
+                            type="tel"
                             id="telephone"
                             name="telephone"
                             placeholder="Phone Number(Optional)"
