--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             id="telephone"
                             name="telephone"
                             placeholder="Phone Number(Optional)"
-                            pattern="^\(?([0-9]{3})\)?[-.●]?([0-9]{3})[-.●]?([0-9]{4})$"
+                            pattern="[0-9] {10}"
                         />
                         <textarea
                             name="message"
