--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             id="telephone"
                             name="telephone"
                             placeholder="Phone Number(Optional)"
-                            pattern="[0-9] {10}"
+                            pattern=“^[+]{1}(?:[0-9\-\(\)\/\.]\s?){6, 15}[0-9]{1}$"
                         />
                         <textarea
                             name="message"
