--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             id="telephone"
                             name="telephone"
                             placeholder="Phone Number(Optional)"
-                            pattern=“^[+]{1}(?:[0-9\-\(\)\/\.]?){6,15}[0-9]{1}$"
+                            pattern="(?:([+]\d{1,4})[-.\s]?)?(?:[(](\d{1,3})[)][-.\s]?)?(\d{1,4})[-.\s]?(\d{1,4})[-.\s]?(\d{1,9})"
                         />
                         <textarea
                             name="message"
